--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+[hidden] {
+	display: none !important;
+}
+
+[disabled] {
+	display: none !important;
+	cursor: not-allowed !important;
+}
+
 a {
 	font-family: Arial, Verdana, sans-serif; 
 	font-size: 14px; font-weight: bold; 
@@ -6,14 +15,18 @@ a {
 	line-height:1.5em;
 }
 
+body,
+html {
+	box-sizing: border-box;
+	margin:0;
+}
 
 body {
 	background: #e89655;
 	background: linear-gradient(to right, #db36a4, #f7ff00);
 	font-size: 16px;
 	min-height: 100vh;
-	min-width: 100vw;
-	margin:0;
+	width: 100vw;
 }
 
 html {
@@ -132,7 +145,7 @@ h3 {
 	position: absolute;
 }
 
-#overlay {
+.overlay {
 	background-color: rgb(0,0,0);
 	background-color: rgba(0,0,0,0.75);
 	overflow: auto;
@@ -144,11 +157,11 @@ h3 {
   	width: 100%; height: 100%;
 }
 
-#overlay.active {
+.overlay.active {
 	opacity: 1;
 }
 
-#overlay .close {
+.overlay .close {
 	align-items: center;
     background: red;
     border: 3px solid red;
@@ -170,12 +183,12 @@ h3 {
     z-index: 1;
 }
 
-#overlay .close:hover {
+.overlay .close:hover {
 	box-shadow:0px 0px 10px 5px rgba(229, 233, 9, 0.5);
 	cursor: pointer;
 }
 
-#overlay > #modal {
+.overlay > #modal {
 	background-color: #fff;
 	border-radius: 0 10px 10px 0;
     margin: 0 auto;
@@ -191,21 +204,21 @@ h3 {
 	width: 80%; 
 }
 
-#overlay > #modal::-webkit-scrollbar-track {
+.overlay > #modal::-webkit-scrollbar-track {
 	border-radius: 10px;
 	background-color: #F5F5F5;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 			box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
-#overlay > #modal::-webkit-scrollbar
+.overlay > #modal::-webkit-scrollbar
 {
 	background-color: #F5F5F5;
 	border-radius: 10px;
 	width: 12px;
 }
 
-#overlay > #modal::-webkit-scrollbar-thumb
+.overlay > #modal::-webkit-scrollbar-thumb
 {
 	background-color: #D62929;
 	border-radius: 10px;
@@ -213,7 +226,7 @@ h3 {
 			box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 }
 
-#overlay > #modal:before {
+.overlay > #modal:before {
 	background: #f7ff00;
 	background: -webkit-linear-gradient(to right, #db36a4, #f7ff00); 
 	background: linear-gradient(to right, #db36a4, #f7ff00);
@@ -224,7 +237,7 @@ h3 {
 	width: 100%; height: .5rem;
 }
 
-#overlay > #modal > #modalBody > div {
+.overlay > #modal > #modalBody > div {
 	background: none;
 	color: #444;
 	font-size: 16px;
@@ -235,12 +248,12 @@ h3 {
 	transition: all 0.3s ease-out;
 }
 
-#overlay > #modal > #modalBody > div:hover {
+.overlay > #modal > #modalBody > div:hover {
 	background: rgba(253, 114, 98, 0.2);
 	cursor: pointer;
 }
 
-#overlay.active > #modal {
+.overlay.active > #modal {
 	transform: scale(1);
 }
 
@@ -349,11 +362,6 @@ h3 {
 	color: yellow;
 	font-family: Arial, Verdana, sans-serif; 
 	font-size: 13px; 
-}
-
-[disabled] {
-	display: none !important;
-	cursor: not-allowed !important;
 }
 
 @media (max-width: 930px) {
