--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -66,32 +66,71 @@ a {
 	}
 }
 
-.modal .num {
-	left: 5%;
-	position: absolute;
-}
-
-.overlay {
-	background-color: rgb(0, 0, 0);
-	background-color: rgba(0, 0, 0, 0.75);
-	opacity: 0;
-	overflow: auto;
+.modal {
+	background-color: #fff;
+    border-radius: 0 10px 10px 0;
+    margin: 0 auto;
+    position: absolute;
+    top: 22.5%;
+    left: 50%;
+    height: 60%;
+    max-width: 600px;
+    overflow-x: hidden;
+	overflow-y: scroll;
 	pointer-events: none;
-	position: fixed;
-	text-align: center;
-	transition: all 0.3s ease-out;
+    text-align: left;
+	transform: translate3d(-50%,0,0);
+	transition: opacity 0.3s ease-out;
+	width: 80%;
 	will-change: opacity;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
 	&.active {
 		pointer-events: auto;
 		opacity: 1;
 	}
-	.close {
+	&::-webkit-scrollbar-track {
+		border-radius: 10px;
+		background-color: #f5f5f5;
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	}
+	&::-webkit-scrollbar {
+		background-color: #f5f5f5;
+		border-radius: 10px;
+		width: 12px;
+	}
+	&::-webkit-scrollbar-thumb {
+		background-color: #d62929;
+		border-radius: 10px;
+		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	}
+	&:before {
+		background: #f7ff00;
+		background: -webkit-linear-gradient(to right, #db36a4, #f7ff00);
+		background: linear-gradient(to right, #db36a4, #f7ff00);
+		content: '';
+		display: block;
+		left: 0;
+		top: 0;
+		position: absolute;
+		width: 100%;
+		height: 0.5rem;
+	}
+	> .modalBody > div {
+		background: none;
+		color: #444;
+		font-size: 16px;
+		font-family: Helvetica, sans-serif;
+		font-weight: bold;
+		line-height: 1.5;
+		margin: 0.75rem 0 0 5rem;
+		transition: all 0.3s ease-out;
+		&:hover {
+			background: rgba(253, 114, 98, 0.2);
+			cursor: pointer;
+		}
+	}
+	> .close {
 		background: red;
 		border: 3px solid red;
 		border-radius: 100%;
@@ -115,68 +154,34 @@ a {
 			cursor: pointer;
 		}
 	}
-	> .modal {
-		background-color: #fff;
-		border-radius: 0 10px 10px 0;
-		margin: 0 auto;
-		position: relative;
-		top: 22.5%;
-		height: 60%;
-		max-width: 600px;
-		overflow-x: visible;
-		overflow-y: scroll;
-		text-align: left;
-		transition: all 0.3s ease-out;
-		transform: scale(0.8);
-		will-change: transform;
-		width: 80%;
-		&::-webkit-scrollbar-track {
-			border-radius: 10px;
-			background-color: #f5f5f5;
-			-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-			box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-		}
-		&::-webkit-scrollbar {
-			background-color: #f5f5f5;
-			border-radius: 10px;
-			width: 12px;
-		}
-		&::-webkit-scrollbar-thumb {
-			background-color: #d62929;
-			border-radius: 10px;
-			-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-			box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-		}
-		&:before {
-			background: #f7ff00;
-			background: -webkit-linear-gradient(to right, #db36a4, #f7ff00);
-			background: linear-gradient(to right, #db36a4, #f7ff00);
-			content: '';
-			display: block;
-			left: 0;
-			top: 0;
-			position: absolute;
-			width: 100%;
-			height: 0.5rem;
-		}
-		> .modalBody > div {
-			background: none;
-			color: #444;
-			font-size: 16px;
-			font-family: Helvetica, sans-serif;
-			font-weight: bold;
-			line-height: 1.5;
-			margin: 0.75rem 0 0 5rem;
-			transition: all 0.3s ease-out;
-			&:hover {
-				background: rgba(253, 114, 98, 0.2);
-				cursor: pointer;
-			}
-		}
+}
+
+.modal .num {
+	left: 5%;
+	position: absolute;
+}
+
+.overlay {
+	background-color: rgb(0, 0, 0);
+	background-color: rgba(0, 0, 0, 0.75);
+	opacity: 0;
+	overflow: auto;
+	pointer-events: none;
+	position: fixed;
+	text-align: center;
+	transition: opacity 0.3s ease-out;
+	will-change: opacity;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	&.active {
+		pointer-events: auto;
+		opacity: 1;
 	}
-	&.active > .modal {
+	/* &.active > .modal {
 		transform: scale(1);
-	}
+	} */
 }
 
 #song {
