--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -11,98 +11,96 @@ a {
 	line-height: 1.5em;
 }
 
-#content {
-	&::-webkit-scrollbar-track {
-		border-radius: 10px;
-		background-color: #f5f5f5;
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+.content {
+	transform: translateZ(0);
+	&__nav {
+		margin: auto;
+		text-align: center;
 	}
-	&::-webkit-scrollbar {
-		width: 12px;
-		background-color: #f5f5f5;
+	&__navbar {
+		background-color: #ffecf6;
+		border-radius: 15px;
+		bottom: 3vmin;
+		justify-content: space-between;
+		left: 0;
+		right: 0;
+		margin: 1vmin auto;
+		padding: 1rem;
+		width: 80%;
 	}
-	&::-webkit-scrollbar-thumb {
-		background-color: #d62929;
-		border-radius: 10px;
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	&__nav-item {
+		align-items: center;
+		display: flex;
+		justify-content: space-evenly;
+		flex-wrap: wrap;
+		margin: 1.5rem 0;
+	}
+	&__nav-span {
+		background-color: #944b66;
+		border-radius: 25px;
+		box-shadow: 0 3px 6px rgba(93, 57, 89, 0.16), 0 6px 12px rgba(93, 57, 89, 0.24);
+		color: #ffdeef;
+		font-family: Helvetica, Arial, Verdana, sans-serif;
+		font-size: 1.2rem;
+		font-weight: bold;
+		flex: 0 0 40%;
+		height: 100%;
+		max-width: 200px;
+		margin: 1rem 1rem;
+		padding: 1rem 0rem;
 	}
 }
 
-#controls {
-	> button {
+.controls {
+	&__button {
 		background-color: transparent;
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
 		background-size: contain;
 		border: none;
-		cursor: pointer;
 		padding-bottom: 2rem;
-		transition: all 0.2s ease-out;
 		width: 6vmin;
 		height: 6vmin;
-		will-change: border, transform;
-		&:hover {
-			border-bottom: 2px solid rgb(242, 255, 56);
-			transform: translateY(-2px);
+		&--back {
+			background-image: url('../img/arrow-left.svg');
 		}
-	}
-	#back {
-		background-image: url('../img/arrow-left.svg');
-	}
-	#index {
-		background-image: url('../img/list.svg');
-	}
-	#full {
-		background-image: url('../img/expand.svg');
-	}
-	#refresh {
-		background-image: url('../img/sync-alt-solid.svg');
-	}
-	#sizeUp {
-		background-image: url('../img/search-plus.svg');
-	}
-	#sizeDown {
-		background-image: url('../img/search-minus.svg');
+		&--index {
+			background-image: url('../img/list.svg');
+		}
+		&--full {
+			background-image: url('../img/expand.svg');
+		}
+		&--refresh {
+			background-image: url('../img/sync-alt-solid.svg');
+		}
+		&--plus {
+			background-image: url('../img/search-plus.svg');
+		}
+		&--minus {
+			background-image: url('../img/search-minus.svg');
+		}
 	}
 }
 
 .modal {
 	background-color: #fff;
-    border-radius: 0 10px 10px 0;
-    margin: 0 auto;
-    position: absolute;
     top: 22.5%;
     left: 50%;
     height: 60%;
+    margin: 0 auto;
+    position: absolute;
     max-width: 600px;
     overflow-x: hidden;
-	overflow-y: scroll;
-	pointer-events: none;
+    overflow-y: scroll;
+    pointer-events: none;
     text-align: left;
-	transform: translate3d(-50%,0,0);
-	transition: opacity 0.3s ease-out;
-	width: 80%;
-	will-change: opacity;
-	&.active {
-		pointer-events: auto;
+    transform: translate3D(-50%,0,0);
+    transition: opacity 0.3s ease-out;
+    width: 80%;
+    will-change: opacity;
+	&--active {
 		opacity: 1;
-	}
-	&::-webkit-scrollbar-track {
-		border-radius: 10px;
-		background-color: #f5f5f5;
-		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	}
-	&::-webkit-scrollbar {
-		background-color: #f5f5f5;
-		border-radius: 10px;
-		width: 12px;
-	}
-	&::-webkit-scrollbar-thumb {
-		background-color: #d62929;
-		border-radius: 10px;
-		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		pointer-events: auto;
 	}
 	&:before {
 		background: #f7ff00;
@@ -116,7 +114,7 @@ a {
 		width: 100%;
 		height: 0.5rem;
 	}
-	> .modalBody > div {
+	&__item {
 		background: none;
 		color: #444;
 		font-size: 16px;
@@ -130,13 +128,14 @@ a {
 			cursor: pointer;
 		}
 	}
-	> .close {
+	&__close {
 		background: red;
 		border: 3px solid red;
 		border-radius: 100%;
 		box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
 		box-sizing: border-box;
 		color: #fff;
+		cursor: pointer;
 		display: flex;
 		float: right;
 		font-family: sans-serif;
@@ -144,21 +143,20 @@ a {
 		height: 5vmin;
 		justify-content: center;
 		position: sticky;
-		transition: box-shadow 0.3s ease;
+		transition: transform 0.2s ease-out;
 		right: 1vmin;
 		top: 1vmin;
 		width: 5vmin;
+		will-change: transform;
 		z-index: 1;
 		&:hover {
-			box-shadow: 0px 0px 10px 5px rgba(229, 233, 9, 0.5);
-			cursor: pointer;
+			transform: translateY(-2px);
 		}
 	}
-}
-
-.modal .num {
-	left: 5%;
-	position: absolute;
+	&__num {
+		left: 5%;
+		position: absolute;
+	}
 }
 
 .overlay {
@@ -169,19 +167,16 @@ a {
 	pointer-events: none;
 	position: fixed;
 	text-align: center;
-	transition: opacity 0.3s ease-out;
+	transition: opacity 0.1s ease-out;
 	will-change: opacity;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	&.active {
+	&--active {
 		pointer-events: auto;
 		opacity: 1;
 	}
-	/* &.active > .modal {
-		transform: scale(1);
-	} */
 }
 
 #song {
@@ -190,9 +185,8 @@ a {
 	flex-wrap: wrap;
 	font-size: 18px;
 	font-weight: 500;
-	font-family: 'Open Sans', 'Arial Narrow', Arial, sans-serif;
+	font-family: 'Helvetica', Arial, sans-serif;
 	line-height: 1.5;
-	margin: 0rem 2rem;
 	position: relative;
 	text-align: left;
 	> {
@@ -237,68 +231,36 @@ a {
 	}
 }
 
-#toc {
-	display: flex;
-	flex-direction: column;
-	height: 95%;
-	justify-content: space-between;
-	margin: auto;
-	position: relative;
-	text-align: center;
-	width: 100%;
-	> .navbar {
-		background: hsla(305, 100%, 96%, 1);
-		border-radius: 15px;
-		bottom: 3vmin;
-		justify-content: center;
-		left: 0;
-		right: 0;
-		margin: 1vmin auto;
-		padding: 1rem;
-		width: 80%;
-		> div {
-			align-items: center;
-			display: flex;
-			justify-content: center;
-			flex-wrap: wrap;
-		}
-		span {
-			color: hsla(300, 50%, 25%, 1);
-			cursor: pointer;
-			font-family: Helvetica, Arial, Verdana, sans-serif;
-			font-size: 1.2rem;
-			font-weight: bold;
-			margin: 0 0.2rem;
-			padding: 1rem 1.5rem;
-			transition: all 0.2s ease-in-out;
-			will-change: background-color, box-shadow, transform;
-			&:hover {
-				background-color: rgba(255, 255, 255, 0.3);
-				box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
-					0 6px 12px rgba(0, 0, 0, 0.24);
-				transform: translateY(-2px);
-			}
-		}
-	}
-}
-
 .footer {
 	color: yellow;
 	font-family: Arial, Verdana, sans-serif;
 	font-size: 13px;
 }
 
-@media (max-width: 930px) {
-	#controls {
-		align-items: center;
-		flex-direction: row;
-		justify-content: space-evenly;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		margin: 0 auto;
-		position: absolute;
-		width: 100%;
-		height: 8vmin;
+@media screen and (min-width: 900px) {
+	.content {
+		bottom:0;
+		&__nav-span {
+			cursor: pointer;
+			transition: transform 0.2s ease-out;
+			will-change: transform;
+			&:hover {
+				transform: translateY(-2px);
+			}
+		}
+	}
+	.controls {	
+		flex-direction:column;
+		height:100%;
+		left:0;
+		width:8vmin;
+		&__button {
+			cursor: pointer;
+			transition: transform 0.2s ease-out;
+			will-change: transform;
+			&:hover {
+				transform: translateY(-2px);
+			}
+		}
 	}
 }
