--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,9 +4,11 @@
 
   &-body {
     background-color: #f5f5f5;
-    min-height: 100vh;
-    font-size: calc(10px + 2vmin);
     color: white;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    font-size: calc(10px + 2vmin);
   }
 
   &-link {
