--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,8 +1,8 @@
-.App {
+.app {
   width: 100%;
   text-align: center;
 
-  &-body {
+  &_body {
     background-color: #f5f5f5;
     color: white;
     display: flex;
@@ -11,7 +11,11 @@
     font-size: calc(10px + 2vmin);
   }
 
-  &-link {
+  &_inner {
+    padding: 10px;
+  }
+
+  &_link {
     color: #61dafb;
   }
 }
