--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,6 +11,12 @@
     font-size: calc(10px + 2vmin);
   }
 
+  &_inner {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
   &_link {
     color: #61dafb;
   }
