--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,16 +4,16 @@
     &_body {
         background-color: #f5f5f5;
         color: white;
-        display: flex;
+        display: grid;
+        grid-template-rows: auto 1fr;
         min-height: 100vh;
         flex-direction: column;
         font-size: calc(10px + 2vmin);
     }
 
     &_inner {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-rows: minmax(150px, auto) 1fr;
     }
 
     &_link {
