--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,7 +5,7 @@
         background-color: #f5f5f5;
         color: white;
         display: grid;
-        grid-template-rows: auto 1fr;
+        grid-template-rows: auto 1fr auto;
         min-height: 100vh;
         flex-direction: column;
         font-size: calc(10px + 2vmin);
