--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,64 +1,16 @@
-.wrapper {
-    margin: 0 auto;
-    width: 90%;
+.card {
+    display: grid;
+    grid-template-rows: auto minmax(auto, 70%) auto;
+    width: 100%;
+    height: 100%;
+    min-width: 300px;
+    max-height: 600px;
+}
 
-    & .hCont {
-        align-items: center;
-        background-color: rgba(0, 12, 23, 0.63);
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        justify-content: center;
-    }
-
-    & .heading {
-        color: #fff;
-    }
-
-    & .card {
-        display: grid;
-        grid-template-rows: auto minmax(auto, 70%) auto;
-        width: 100%;
-        height: 100%;
-        min-width: 250px;
-        max-height: 600px;
-    }
-
-    & .media {
-        height: 150px;
-    }
-
-    & .title {
-        font-size: 14px;
-    }
-
-    & .pos {
-        margin-bottom: 12px;
-    }
-
-    & .grid {
-        height: 100%;
-        display: grid;
-        grid-gap: 30px;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        padding: 2rem 0;
-    }
-
-    & .action {
-        margin-left: auto;
-    }
-
-    & .bgImgCont {
-        width: 100%;
-        height: 25vh;
-        display: block;
-        position: relative;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: bottom center;
-    }
-
-    & .bgImg {
-        display: none;
-    }
+.grid {
+    height: 100%;
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding: 2rem 0;
 }
