--- a/src/pages/Songs/Songs.scss
+++ b/src/pages/Songs/Songs.scss
@@ -1,13 +1,4 @@
-.listing {
+.songs {
     color: #111;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    justify-content: flex-start;
-    overflow-y: auto;
-
-    & .header {
-        color: "#111";
-        font-size: 24;
-    }
+    height: 100%;
 }
