--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -10,12 +10,14 @@
         grid-template-rows: auto 1fr auto;
         min-height: 100vh;
         flex-direction: column;
-        font-size: calc(10px + 2vmin);
+        font-size: calc(10px + 1.75vmin);
     }
 
     &_inner {
         display: grid;
         grid-template-rows: minmax(150px, auto) 1fr;
+        //grid-template-rows: minmax(150px, 250px) auto;
+        align-items: center;
     }
 
     &_link {
@@ -25,5 +27,6 @@
 
 .wrapper {
     margin: 0 auto;
-    padding-bottom: 3rem;
+    width: 100%;
+    height: 100%;
 }
