--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -8,9 +8,12 @@
 }
 
 .grid {
+    align-content: space-around;
     height: 100%;
     display: grid;
     grid-gap: 30px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     padding: 2rem 0;
+    width: 90%;
+    margin: auto;
 }
