--- a/src/components/SongList/SongList.scss
+++ b/src/components/SongList/SongList.scss
@@ -16,15 +16,18 @@
     }
 
     & .listItem {
+        align-items: center;
         background-color: #fff;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         cursor: pointer;
         display: grid;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        padding: 0 20px;
         text-align: left;
         transition: background 0.1s ease-in-out;
         user-select: none;
         will-change: background;
-        grid-template-columns: 25% 1fr;
+        grid-template-columns: 20% 1fr;
+
         &:after {
             left: 0;
             width: 100%;
@@ -36,10 +39,13 @@
         }
     }
 
+    & .listNumber {
+        font-size: 1rem;
+    }
+
     & .listTitle {
-        display: flex;
-        padding: 0 20px;
-        align-items: center;
+        font-size: 1rem;
+        font-weight: 700;
     }
 
     & .utilityHeader {
@@ -48,33 +54,34 @@
         color: #333;
         display: flex;
         justify-content: center;
-        height: 3rem;
+        height: 3.5rem;
         font-size: 1.3rem;
 
         width: 100%;
+
+        & button {
+            background-color: #fff;
+            border: 0;
+            border-right: 1px solid #ddd;
+            flex: 1 1 100%;
+            height: 100%;
+            padding: 0.5rem;
+        }
 
         & > :last-child {
             border-right: none;
         }
 
-        & button {
-            background-color: #fff;
-            border-right: 1px solid #ddd;
-            border: 0;
-            flex: 1 1 100%;
+        & svg {
             height: 100%;
-            padding: 0.5rem;
-        }
-        & img {
-            height: 100%;
-            color: var(--primary-color);
+            color: var(--dark-neutral-color);
+            fill: var(--dark-neutral-color);
+
             &.active {
-                color: var(--accent-color);
+                color: var(--primary-color);
+                fill: var(--primary-color);
             }
         }
-    }
-
-    & .listSwitcher {
     }
 
     & .loader {
@@ -101,6 +108,11 @@
             background: rgba(255, 255, 255, 0.1);
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
         }
+    }
+
+    & .ant-spin-container {
+        display: grid;
+        grid-auto-rows: 4rem;
     }
 }
 
