--- a/src/components/SongList/SongList.scss
+++ b/src/components/SongList/SongList.scss
@@ -27,16 +27,6 @@
         user-select: none;
         will-change: background;
         grid-template-columns: 20% 1fr;
-
-        &:after {
-            left: 0;
-            width: 100%;
-            bottom: 0;
-            height: 10px;
-            content: "";
-            position: absolute;
-            background-color: #f4f4f4;
-        }
     }
 
     & .listNumber {
@@ -44,7 +34,7 @@
     }
 
     & .listTitle {
-        font-size: 1rem;
+        font-size: 1.3rem;
         font-weight: 700;
     }
 
@@ -63,6 +53,7 @@
             background-color: #fff;
             border: 0;
             border-right: 1px solid #ddd;
+            cursor: pointer;
             flex: 1 1 100%;
             height: 100%;
             padding: 0.5rem;
@@ -104,10 +95,6 @@
         padding: 0.6rem 0;
         transition: background 0.1s ease-in-out, box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
         will-change: background, box-shadow;
-        &:hover {
-            background: rgba(255, 255, 255, 0.1);
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-        }
     }
 
     & .ant-spin-container {
@@ -116,16 +103,18 @@
     }
 }
 
-@media (min-width: 425px) {
-    .listing {
-        & .grid {
-            grid-template-rows: repeat(auto-fit, 1fr);
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+@media (min-width: 960px) {
+    .songs .menuOpt,
+    .songs .listItem {
+        &:hover {
+            background: rgba(255, 255, 255, 0.75);
+            //box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
         }
-        & .listItem {
-            &:hover {
-                background: rgba(0, 0, 0, 0.1);
-            }
+    }
+
+    .songs .utilityHeader .listSwitcher {
+        &:hover {
+            background: #f5f5f5aa;
         }
     }
 }
