--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
     --accent-color: #0e66b9;
     --dim-color: #0e66b9;
     --dark-neutral-color: #444444;
+    --background-color: #ffffff;
+    --background-color-alt: #f5f5f5;
 }
 
 body {
