--- a/src/components/SongList/SongList.scss
+++ b/src/components/SongList/SongList.scss
@@ -1,5 +1,5 @@
 .songs {
-    & .grid {
+    .grid {
         width: 100%;
         display: grid;
         grid-gap: 10px;
@@ -7,10 +7,12 @@
         grid-template-columns: repeat(2, minmax(60px, 1fr));
     }
 
-    & .listItem {
+    .listItem {
         align-items: center;
         background-color: #fff;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        //box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+        border-right: 1px solid rgba(0, 0, 0, 0.12);
         cursor: pointer;
         display: grid;
         padding: 0 20px;
@@ -18,19 +20,20 @@
         transition: background 0.1s ease-in-out;
         user-select: none;
         will-change: background;
-        grid-template-columns: 20% 1fr;
+        grid-template-columns: 100px 1fr;
     }
 
-    & .listNumber {
+    .listNumber {
         font-size: 1rem;
+        font-weight: 700;
     }
 
-    & .listTitle {
+    .listTitle {
         font-size: 1.3rem;
         font-weight: 700;
     }
 
-    & .utilityHeader {
+    .utilityHeader {
         background-color: #fff;
         border-bottom: 1px solid #ddd;
         color: #333;
@@ -67,7 +70,25 @@
         }
     }
 
-    & .loader {
+    .listSwitcher {
+        transition: background 0.1s ease-in-out;
+        will-change: background;
+        &:hover {
+            background: lighten($color: rgb(24, 144, 255), $amount: 30%);
+        }
+    }
+
+    .menuOpt,
+    .listItem {
+        transition: background 0.1s ease-in-out, color 0.1s ease-in;
+        will-change: background, color;
+        &:hover {
+            background: rgb(24, 144, 255);
+            color: #fff;
+        }
+    }
+
+    .loader {
         height: 100%;
         width: 100%;
         display: flex;
@@ -75,7 +96,7 @@
         justify-content: center;
     }
 
-    & .menuOpt {
+    .menuOpt {
         align-items: center;
         background: rgba(255, 255, 255, 1);
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.3);
@@ -86,28 +107,14 @@
         padding: 0.6rem 0;
     }
 
-    & .ant-spin-container {
+    .ant-spin-container {
         display: grid;
         grid-auto-rows: 4rem;
     }
 }
 
 @media (min-width: 960px) {
-    .songs .menuOpt,
-    .songs .listItem {
-        transition: background 0.1s ease-in-out, box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-        will-change: background, box-shadow;
-        &:hover {
-            background: rgba(255, 255, 255, 0.75);
-            //box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-        }
-    }
-
-    .songs .utilityHeader .listSwitcher {
-        transition: background 0.1s ease-in-out, box-shadow 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-        will-change: background, box-shadow;
-        &:hover {
-            background: #f5f5f5aa;
-        }
+    .songs .ant-spin-container {
+        grid-template-columns: 1fr 1fr;
     }
 }
