--- a/src/pages/Songs/Songs.scss
+++ b/src/pages/Songs/Songs.scss
@@ -1,7 +1,7 @@
 .songs {
     color: #111;
-    height: 100%;
     display: grid;
+    grid-template-rows: auto 1fr;
+    height: 100%;
     justify-items: stretch;
-    align-items: center;
 }
