--- a/src/pages/Songs/Songs.scss
+++ b/src/pages/Songs/Songs.scss
@@ -1,7 +1,7 @@
 .songs {
-    color: #111;
-    display: grid;
-    grid-template-rows: auto 1fr;
-    height: 100%;
-    justify-items: stretch;
+	color: #111;
+	display: grid;
+	grid-template-rows: auto minmax(450px, 1fr);
+	height: 100%;
+	justify-items: stretch;
 }
