--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -14,7 +14,7 @@
 	height: 100%;
 	display: grid;
 	grid-gap: 30px;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(300px, 100%));
 	justify-items: center;
 	margin: auto;
 	max-width: 800px;
