--- a/src/components/BottomNav/BottomNav.scss
+++ b/src/components/BottomNav/BottomNav.scss
@@ -1,44 +1,45 @@
 .am-tab-bar-bar {
-    transform: translateY(0);
-    transition-property: transform;
-    will-change: transform;
-    &-hidden-bottom {
-        bottom: initial;
-        height: initial;
-        transform: translateY(100%);
-    }
+	transform: translateY(0);
+	transition-property: transform;
+	will-change: transform;
+	&-hidden-bottom {
+		bottom: initial;
+		height: initial;
+		transform: translateY(100%);
+	}
 }
 
 .am-tabs-content-wrap {
-    min-height: 0;
+	min-height: 0;
 }
 
 .bottom-nav {
-    border-top: 1px solid #ddd;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 0.6rem 0;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	column-gap: 20px;
+	justify-items: center;
+	padding: 0.6rem 0;
 
-    bottom: 0;
-    max-height: 60px;
-    position: sticky;
-    transition: transform 0.2s ease-in;
-    will-change: transform;
-    width: 100%;
-    z-index: 100;
+	bottom: 0;
+	max-height: 60px;
+	position: sticky;
+	transition: transform 0.2s ease-in;
+	will-change: transform;
+	width: 100%;
+	z-index: 100;
 
-    &.--hidden {
-        transform: translateY(100%);
-    }
+	&.--hidden {
+		transform: translateY(100%);
+	}
 
-    & .nav-item {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        font-size: 0.8rem;
+	& .nav-item {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		font-size: 0.8rem;
 
-        & > .anticon {
-            font-size: 1.4rem;
-        }
-    }
+		& > .anticon {
+			font-size: 1.4rem;
+		}
+	}
 }
