--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,9 +4,8 @@
 	grid-template-rows: auto minmax(auto, 70%) auto;
 	width: 100%;
 	height: 100%;
-	min-width: 300px;
-	max-width: 400px;
-	max-height: 400px;
+	min-width: 380px;
+	max-width: 380px;
 }
 
 .grid {
@@ -14,7 +13,7 @@
 	height: 100%;
 	display: grid;
 	grid-gap: 30px;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 100%));
+	grid-template-columns: repeat(auto-fit, minmax(380px, auto));
 	justify-items: center;
 	margin: auto;
 	max-width: 800px;
