--- a/src/pages/Songs/Songs.scss
+++ b/src/pages/Songs/Songs.scss
@@ -1,6 +1,6 @@
 .songs {
 	display: grid;
-	grid-template-rows: auto minmax(450px, 1fr);
+	grid-template-rows: minmax(400px, 1fr);
 	height: 100%;
 	justify-items: stretch;
 }
