--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,22 +1,19 @@
 .card {
 	align-content: space-between;
 	display: grid;
-	grid-template-rows: auto minmax(auto, 70%) auto;
+	grid-template-rows: auto 1fr auto;
 	width: 100%;
 	height: 100%;
-	min-width: 380px;
+	min-width: 300px;
 	max-width: 380px;
 }
 
 .grid {
 	align-content: flex-start;
 	height: 100%;
-	display: grid;
-	grid-gap: 30px;
-	grid-template-columns: repeat(auto-fit, minmax(380px, auto));
+	justify-content: center;
 	justify-items: center;
 	margin: auto;
-	max-width: 800px;
 	padding: 2rem 0;
 	width: 90%;
 }
