--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,10 +1,9 @@
 .card {
 	align-content: space-between;
 	display: grid;
-	grid-template-rows: auto 1fr auto;
+	grid-template-rows: auto 300px auto;
 	width: 100%;
-	height: 100%;
-	min-width: 300px;
+	min-width: 250px;
 	max-width: 380px;
 }
 
