Lots of important feature additions and styling * Dropped rainbow image in header in favor of simple, clean pattern * Added remaining logic for all filter options, allowing nested filtering * Disabled filter options which were mutually exclusive * Enabled mobile search field to properly work * Adjusted loading indicators for homepage images * Other misc styling / bug fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -121,21 +121,21 @@ button:-moz-focusring,
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: #d6dee1;
+	background-color: var(--chakra-colors-whiteAlpha-700);
 	border-radius: 20px;
 	border: 6px solid transparent;
 	background-clip: content-box;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	background-color: #a8aebf;
+	background-color: var(--chakra-colors-whiteAlpha-600);
 }
 
 html[style="--chakra-ui-color-mode:light;"] {
 	& ::-webkit-scrollbar-thumb {
-		background-color: #a5acaf;
+		background-color: var(--chakra-colors-blackAlpha-400);
 		&:hover {
-			background-color: #888d9c;
+			background-color: var(--chakra-colors-blackAlpha-300);
 		}
 	}
 }
