--- a/src/components/SongList/SongList.scss
+++ b/src/components/SongList/SongList.scss
@@ -1,21 +1,12 @@
 .songs {
-	.grid {
-		width: 100%;
-		display: grid;
-		grid-gap: 10px;
-		grid-auto-rows: 80px;
-		grid-template-columns: repeat(2, minmax(60px, 1fr));
-	}
-
 	.listItem {
 		align-items: center;
-		// background-color: #fff;
-		//box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 		border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 		border-right: 1px solid rgba(0, 0, 0, 0.12);
 		cursor: pointer;
 		display: grid;
 		grid-template-columns: 80px 1fr;
+		height: 100%;
 		padding: 0 20px;
 		text-align: left;
 		transition: background 0.1s ease-in-out;
