--- a/src/components/BottomNav/BottomNav.scss
+++ b/src/components/BottomNav/BottomNav.scss
@@ -1,24 +1,25 @@
 .bottom-nav {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 	column-gap: 20px;
 	justify-items: center;
 	padding: 0.6rem 0;
 
 	bottom: 0;
 	max-height: 60px;
-	position: sticky;
+	position: fixed;
 	width: 100%;
 	z-index: 100;
+
+	&.--hidden {
+		transform: scaleY(0);
+		z-index: -1;
+	}
 
 	& .nav-item {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		font-size: 0.8rem;
-
-		& > .anticon {
-			font-size: 1.4rem;
-		}
 	}
 }
