--- a/src/components/Songs/SongList/SongList.scss
+++ b/src/components/Songs/SongList/SongList.scss
@@ -1,26 +1,25 @@
 .songs {
 	.listItem {
 		align-items: center;
-		border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-		border-right: 1px solid rgba(0, 0, 0, 0.12);
 		cursor: pointer;
-		display: grid;
-		grid-template-columns: 80px 1fr;
 		height: 100%;
-		padding: 0 20px;
 		text-align: left;
-		transition: background 0.1s ease-in-out;
 		user-select: none;
-		will-change: background;
+		transition: background 0.1s ease-in-out, color 0.1s ease-in;
+		will-change: background, color;
+		&:hover {
+			background: var(--chakra-colors-blue-500);
+			color: #fff;
+		}
 	}
 
 	.listNumber {
-		font-size: 1rem;
+		font-size: 1.1rem;
 		font-weight: 700;
 	}
 
 	.listTitle {
-		font-size: 1.3rem;
+		font-size: 1rem;
 		font-weight: 700;
 	}
 
@@ -68,24 +67,9 @@
 		}
 	}
 
-	.listSwitcher {
-		align-items: center;
-		display: flex;
-		justify-content: center;
-		transition: background 0.1s ease-in-out;
-		will-change: background;
+	.faveIcon {
 		&:hover {
-			background: lighten($color: rgb(24, 144, 255), $amount: 30%);
-		}
-	}
-
-	.menuOpt,
-	.listItem {
-		transition: background 0.1s ease-in-out, color 0.1s ease-in;
-		will-change: background, color;
-		&:hover {
-			background: rgb(24, 144, 255);
-			color: #fff;
+			transform: translateY(-2px);
 		}
 	}
 
@@ -97,26 +81,19 @@
 		justify-content: center;
 	}
 
-	.menuOpt {
-		align-items: center;
-		// background: rgba(255, 255, 255, 1);
-		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.3);
-		cursor: pointer;
-		display: flex;
-		font-size: 2rem;
-		justify-content: center;
-		padding: 0.6rem 0;
-	}
+	@media only screen and (min-width: 475px) {
+		.listNumber {
+			font-size: 1rem;
+		}
 
-	.ant-spin-container {
-		display: grid;
-		grid-auto-rows: minmax(4rem, auto);
+		.listTitle {
+			font-size: 1.2rem;
+		}
 	}
-}
-
-@media (min-width: 960px) {
-	.songs .ant-spin-container {
-		grid-template-columns: 1fr 1fr;
+	@media only screen and (min-width: 975px) {
+		.listTitle {
+			font-size: 1.4rem;
+		}
 	}
 }
 
