--- a/src/components/BottomNav/BottomNav.scss
+++ b/src/components/BottomNav/BottomNav.scss
@@ -10,8 +10,14 @@
 	position: fixed;
 	width: 100%;
 	z-index: 100;
+	transition: transform 0.25s ease-in-out;
+	will-change: transform;
 
 	&.--hidden {
+		transform: translateY(100%);
+	}
+
+	&.--disabled {
 		transform: scaleY(0);
 		z-index: -1;
 	}
