--- a/src/components/BottomNav/BottomNav.scss
+++ b/src/components/BottomNav/BottomNav.scss
@@ -3,10 +3,9 @@
 	grid-template-columns: repeat(3, 1fr);
 	column-gap: 20px;
 	justify-items: center;
-	padding: 0.6rem 0;
+	padding: 0;
 
 	bottom: 0;
-	max-height: 60px;
 	position: fixed;
 	width: 100%;
 	z-index: 100;
