--- a/src/pages/Search/Search.scss
+++ b/src/pages/Search/Search.scss
@@ -13,6 +13,8 @@
 }
 
 .gridItem {
+	align-content: center;
+	grid-template-rows: min-content;
 	cursor: pointer;
 	transition: transform 0.1s ease-in-out;
 	will-change: transform;
