Fixed search box on search page

--- a/src/pages/Search/Search.scss
+++ b/src/pages/Search/Search.scss
@@ -15,6 +15,7 @@
 .gridItem {
 	align-content: center;
 	grid-template-rows: min-content;
+	grid-template-columns: 70px auto;
 	cursor: pointer;
 	transition: transform 0.1s ease-in-out;
 	will-change: transform;
