Updated multiple dependencies React 18, React Router v6, Chakra UI v2, Eslint v8, and others Updated breaking changes and newer syntax

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,7 +45,7 @@ body,
 	background-color: var(--chakra-colors-whiteAlpha-600);
 }
 
-html[style="--chakra-ui-color-mode:light;"] {
+html[data-theme="light"] {
 	& ::-webkit-scrollbar-thumb {
 		background-color: var(--chakra-colors-blackAlpha-400);
 		&:hover {
