--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,6 @@
 .root {
 	width: 100%;
+	padding: 0;
 }
 
 .app {
@@ -9,12 +10,15 @@
 		min-height: 100vh;
 		flex-direction: column;
 		font-size: calc(10px + 1.75vmin);
+		padding: 0;
 	}
 
 	&_inner {
 		display: grid;
 		grid-template-rows: minmax(150px, auto) 1fr;
 		align-items: center;
+		width: 100%;
+
 		&_mobile {
 			padding-bottom: 3rem;
 		}
