--- a/src/components/Songs/SongList/SongList.scss
+++ b/src/components/Songs/SongList/SongList.scss
@@ -1,4 +1,17 @@
 .songs {
+	.song-item {
+		&:hover {
+			.mantine-Group-root {
+				background: var(--mantine-primary-color-6);
+				color: white;
+				
+				.mantine-Text-root {
+					color: white;
+				}
+			}
+		}
+	}
+
 	.listItem {
 		align-items: center;
 		cursor: pointer;
@@ -8,7 +21,7 @@
 		transition: background 0.1s ease-in-out, color 0.1s ease-in;
 		will-change: background, color;
 		&:hover {
-			background: var(--chakra-colors-blue-500);
+			background: var(--mantine-primary-color-6);
 			color: #fff;
 		}
 	}
