--- a/src/index.scss
+++ b/src/index.scss
@@ -41,20 +41,46 @@ body,
   scroll-behavior: smooth;
 }
 
-/* custom scrollbar */
-::-webkit-scrollbar {
-  width: 20px;
+#root {
+  :global([role='list']) {
+    // Webkit scrollbar styles (Chrome, Safari, Edge)
+    &::-webkit-scrollbar {
+      width: 2px;
+    }
+    
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+      background-color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-4));
+      border-radius: 1px;
+    }
+    
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: light-dark(var(--mantine-color-gray-6), var(--mantine-color-dark-3));
+    }
+    
+    // Firefox scrollbar styles
+    scrollbar-width: thin;
+    scrollbar-color: light-dark(var(--mantine-color-gray-4), var(--mantine-color-dark-4)) transparent;
+  }
 }
 
-::-webkit-scrollbar-track {
-  background-color: transparent;
-}
+// /* custom scrollbar */
+// ::-webkit-scrollbar {
+//   width: 20px;
+// }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 20px;
-  border: 6px solid transparent;
-  background-clip: content-box;
-}
+// ::-webkit-scrollbar-track {
+//   background-color: transparent;
+// }
+
+// ::-webkit-scrollbar-thumb {
+//   border-radius: 20px;
+//   border: 6px solid transparent;
+//   background-clip: content-box;
+// }
 
 /* Dark scheme scrollbar (white-ish thumb) */
 html[data-mantine-color-scheme='dark'] ::-webkit-scrollbar-thumb {
